--- a/FoundIt/FoundIt-Info.plist
+++ b/FoundIt/FoundIt-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>UWMadison.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>Mad.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
