--- a/FoundItTests/FoundItTests-Info.plist
+++ b/FoundItTests/FoundItTests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>UWMadison.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>Mad.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
